fix skills top phone spacing

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -285,7 +285,7 @@ body {
 
   .skills-title {
     // padding-left: 1rem;
-    padding-top: 4rem;
+    padding-top: 1rem;
   }
 
   .skills-container {
